[package]
name = "mine"
version = "0.1.0"
authors = ["Fred Lahde <frederick.lahde@worldiety.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
futures = "0.3.7"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
tokio-process = "0.2.5"
async-trait = "0.1.41"
serde = { version = "1.0.82", features = ["derive"] }
serde_ignored = "0.1.0"
serde_json = { version = "1.0.30", features = ["raw_value"] }
